--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@angular/compiler-cli": "^2.4.1",
     "gulp": "^3.9.1",
+    "gulp-util": "^3.0.8",
     "through2": "^2.0.3"
   },
   "devDependencies": {
