--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   },
   "description": "Extremely simple and dummy gulp plugin who wraps @angular/compiler-cli",
   "dependencies": {
-    "@angular/compiler-cli": ">=2.4.1",
-    "gulp": ">=3.9.1",
+    "@angular/compiler-cli": "^4.1.1",
+    "@angular/compiler": "^4.1.1",
+    "@angular/core": "^4.1.1",
+    "rxjs": "^5.4.3",
+    "zone.js": "^0.8.18",
+    "gulp": "github:gulpjs/gulp#4.0",
     "gulp-util": ">=3.0.8",
     "through2": ">=2.0.3"
   },
   "devDependencies": {
+    "typescript": "^2.5.3",
     "rollup": ">=0.38.2"
   },
   "engines": {
@@ -38,5 +43,5 @@
   "scripts": {
     "build": "node_modules/.bin/rollup -c rollup-config.js"
   },
-  "version": "0.3.2"
+  "version": "4.0.0"
 }
