--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "description": "Extremely simple and dummy gulp plugin who wraps @angular/compiler-cli",
   "dependencies": {
     "@angular/compiler-cli": ">=2.4.1",
-    "gulp": ">=3.9.1",
-    "gulp-util": ">=3.0.8",
+    "gulp": ">=4.0.2",
+    "plugin-error": ">=1.0.1",
+    "ansi-colors": ">=4.1.1",
     "through2": ">=2.0.3"
   },
   "devDependencies": {
